--- a/part0/0-4.md
+++ b/part0/0-4.md
@@ -1,10 +1,13 @@
+```mermaid
 sequenceDiagram
     participant browser
     participant server
 
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    Note right of browser: Payload: note, Content-Type: application/x-www-form-urlencoded
     activate server
     server-->>browser: HTML document
+    Note left of server: Redirects to https://studies.cs.helsinki.fi/exampleapp/notes and will reload the page
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
@@ -25,3 +28,4 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
+```
